<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@android:color/background_light">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:weightSum="1"
        android:theme="@style/AppTheme">

        <!--  Email Label -->

        <!--  Password Label -->

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etNombre"
            android:hint="@string/texto_reg_hin_nombre"
            android:textColor="?attr/colorPrimary"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/etEmail"
            android:hint="@string/texto_reg_hin_email"
            android:textColor="?attr/colorPrimary"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etContrasena"
            android:hint="@string/texto_reg_hin_contrasena"
            android:textColor="?attr/colorPrimary" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etConfirmarContrasena"
            android:hint="@string/texto_reg_hin_confirmar_contrasena"
            android:textColor="?attr/colorPrimary" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_registrarse"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/texto_button_registrarse"
            android:backgroundTint="@color/colorPrimary"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:textColor="@android:color/white" />


        <TextView android:id="@+id/link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/texto_link_iniciar_sesion"
            android:gravity="center"
            android:textSize="16dip"
            android:textColor="@color/colorPrimary" />


    </LinearLayout>
</LinearLayout>