<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <EditTextPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="etNombreContacto"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_titulo_nombre_contacto" />
    <EditTextPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="etEmailContacto"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_titulo_email_contacto" />
    <EditTextPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="etNumeroContacto"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_titulo_numero_movil_contacto" />
</PreferenceScreen>
