<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@android:color/background_light"
    android:weightSum="1">



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:weightSum="1"
        android:theme="@style/AppTheme">

        <!--  Email Label -->

        <!--  Password Label -->

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etEmail"
            android:hint="@string/texto_hin_email"
            android:textColor="?attr/colorPrimary"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etContrasena"
            android:hint="@string/texto_hin_contrasena"
            android:textColor="?attr/colorPrimary" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_iniciar_sesion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/texto_button_iniciar_sesion"
            android:backgroundTint="@color/colorPrimary"
            android:background="@color/colorPrimary"
            android:elevation="20dp"
            android:textColor="@android:color/white"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" />

        <TextView android:id="@+id/link_registrarse"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"

            android:text="@string/texto_link_registrase"
            android:gravity="center"
            android:textSize="16dip"
            android:textColor="@color/colorPrimary" />


    </LinearLayout>

</LinearLayout>